# hyprland-activewindow

./: Cargo.toml  README.md
src/: main.rs
